src/test/ui/feature-gates/feature-gate-asm.stderr
error[E0658]: inline assembly is not stable enough for use and is subject to change
  --> $DIR/feature-gate-asm.rs:3:9
   |
LL |         asm!("");
   |         ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29722
   = help: add #![feature(asm)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
