src/test/ui/feature-gates/feature-gate-asm.rs
fn main() {
    unsafe {
        asm!(""); //~ ERROR inline assembly is not stable enough
    }
}
